# investitore-intelligente

./: .pre-commit-config.yaml  .secrets.baseline  about.html  app.py  app.sh  catalogo-bot.html  catalogo-bot.js  contact.html  data.html  emissioni-bot.csv  index.html  inflazione.csv  load_csv.js  pyproject.toml  quotazioni-bot.csv  scrape-bot-quote.py  script.js  styles.css  tassi-interesse.csv
data/: investor.db
src/intelligent_investor/: config.yaml
src/intelligent_investor/clients/: __init__.py  client_base.py  teleborsa_bot_client.py
src/intelligent_investor/controllers/: __init__.py  bond_controller.py
src/intelligent_investor/core/: __init__.py  config.py  database.py  log.py
src/intelligent_investor/db/: __init__.py  base.py
src/intelligent_investor/dtos/: __init__.py  bond.py  bond_quote.py
src/intelligent_investor/models/: bond.py  bond_quotes.py
src/intelligent_investor/services/: __init__.py  bond_quote_service.py  bond_service.py  bond_sync_service.py  db_initializer.py  scraper_base.py  teleborsa_bot_scraper.py
src/intelligent_investor/templates/: base.html
src/intelligent_investor/templates/bonds/: confirm_delete.html  detail.html  form.html  index.html
test/: conftest.py  test_bond_quote_service.py  test_bond_service.py
