[project]
authors = [
  {name = "Salvatore D'Angelo", email = "sasadangelo@gmail.com"},
]
dependencies = [
  "beautifulsoup4>=4.15.0",
  "Flask>=3.1.2",
  "Flask-SQLAlchemy>=3.1.1",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "PyYAML>=6.0.3",
  "requests>=2.34.2",
  "SQLAlchemy>=2.0",
]
description = "Intelligent Investor — a Python application to manage bonds and investments"
keywords = ["python", "investing", "bonds", "finance"]
name = "investitore-intelligente"
readme = "README.md"
requires-python = ">=3.10,<3.15"
version = "0.1.0"

[dependency-groups]
dev = [
  "bandit>=1.9.2",
  "coverage>=7.13.0",
  "detect-secrets>=1.5.0",
  "mypy>=1.19.1",
  "poethepoet>=0.39.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "radon>=6.0.1",
  "ruff>=0.11.0",
  "types-pyyaml>=6.0.12",
]

[tool.ruff]
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "*.egg-info",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# E/W: pycodestyle  F: Pyflakes  I: isort  N: pep8-naming
# UP: pyupgrade  B: flake8-bugbear  C4: comprehensions  SIM: simplify
ignore = []
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # Pyflakes
  "I", # isort (replaces isort tool)
  "N", # pep8-naming
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
lines-between-types = 0
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Replaces black
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
strict = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
